--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -51,7 +51,7 @@ body {
 }
 
 .progress-bar {
-    width: 438px;
+    width: 90%;
     height: 8px;
 }
 
@@ -70,8 +70,8 @@ body {
 }
 
 .progressbar {
-    margin-top: -13px;
+    margin-top: 7%;
 }
 .bar {
-    margin-top: -15px;
+    margin-top: -30px;
 }
